# LiamPhone

./: README.md
mock-backend/: README.md  async_impl.c  async_impl_types.h  button_impl.c  display_driver.c  do_build.sh  fs.c  fs_impl_types.h  host_bridge.c  host_bridge.h  main.c  onboard_led.c  rotary_encoder_impl.c
mock-host/: README.md  build_fast_draw.bat  disk_contents.json  disk_gen.py  fast_draw.c  font_gen.py  main.py
pico-phone/: CMakeLists.txt  README.md
pico-phone/core/: async.c  async.h  async_impl.h  async_low_level.h  button.c  button.h  button_impl.h  core.c  db.c  db.h  display.c  display.h  display_driver.h  events.h  fs.h  fs_op_examples.txt  glyphs.c  glyphs.h  list.c  list.h  onboard_led.h  rotary_encoder.c  rotary_encoder.h  rotary_encoder_impl.h  screen.h  screen_home.c  screen_home.h  screen_machine.c  screen_machine.h  screen_texts.c  screen_texts.h  text_convo_mockup.txt
pico-phone/platform/: async_impl.c  async_impl_types.h  display_driver.c  main.c  onboard_led.c
